--- a/delay_prediction.ipynb
+++ b/delay_prediction.ipynb
@@ -314,6 +314,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stationDS = pd.read_csv('data/generated/station_' + str(targetStationId) + '.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -322,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +382,7 @@
        "       '2019-07-07T00:00:00.000000000'], dtype='datetime64[ns]')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +604,7 @@
        "345655             2572            6   14      4  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,9 +625,6 @@
     "# drop 'actually_arrived_at' column because we have delays now!\n",
     "ds = ds.drop('actually_arrived_at', axis = 1)\n",
     "\n",
-    "# Saving feature names for later use\n",
-    "feature_list = list(ds.columns)\n",
-    "\n",
     "print(ds.shape)\n",
     "ds.head()\n",
     "# ds.day_of_week.unique()"
@@ -626,13 +632,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert to numpy array\n",
     "labels = np.array(ds.delays)\n",
-    "features = np.array(ds.drop('delays', axis = 1))"
+    "\n",
+    "tempDS = ds.drop('delays', axis = 1)\n",
+    "\n",
+    "# tempDS = tempDS.drop('next_station_diva_nach', axis = 1)\n",
+    "# tempDS = tempDS.drop('month', axis = 1)\n",
+    "# tempDS = tempDS.drop('direction', axis = 1)\n",
+    "\n",
+    "features = np.array(tempDS)\n",
+    "\n",
+    "\n",
+    "# Saving feature names for later use\n",
+    "feature_list = list(tempDS.columns)"
    ]
   },
   {
@@ -644,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,24 +752,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mean of delay:  70.91379192878068\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('mean of delay: ', labels.mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,18 +771,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Train] Average error: 16.74\n",
-      "[Train] SSE:  24.03\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# training set errors\n",
     "# Calculate the absolute errors\n",
@@ -786,21 +786,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 32. 136.  11.   8.  31.  26.  14.  10.   7.  41.  44.   3.  62.  68.\n",
-      "  48.  36.   2. 106.  70. 109.]\n",
-      "[ 27.655 100.25   22.49   18.682  30.235  25.093  28.549  40.047  18.178\n",
-      "  38.136  37.142  12.988  51.575  54.309  36.996  31.317  23.611  80.82\n",
-      "  54.894  77.238]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(train_labels[:20])\n",
     "print(train_predictions[:20])"
@@ -808,23 +796,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 23. 234.  88.  29.  12. 143.  83.  41.  37. 144.  37.  20. 242. 119.\n",
-      "  75.  57.  92.  90. 134.  27.]\n",
-      "[ 73.988 177.511 130.721  38.088  46.867 204.776  88.47   68.461  55.773\n",
-      " 125.32   70.572  77.957 158.79   48.481  90.83   87.224  60.478  74.953\n",
-      " 165.082  98.683]\n",
-      "[Test] Average error: 52.9\n",
-      "[Test] SSE:  80.28\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use the forest's predict method on the test data\n",
     "test_predictions = rf.predict(test_features)\n",
@@ -850,6 +824,65 @@
     "\n",
     "# print('Accuracy:', round(accuracy, 2), '%.')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Import tools needed for visualization\n",
+    "# from sklearn.tree import export_graphviz\n",
+    "# import pydot\n",
+    "\n",
+    "# # Pull out one tree from the forest\n",
+    "# tree = rf.estimators_[5]\n",
+    "\n",
+    "# # Export the image to a dot file\n",
+    "# export_graphviz(tree, out_file = 'tree.dot', feature_names = feature_list, rounded = True, precision = 1)\n",
+    "\n",
+    "# # Use dot file to create a graph\n",
+    "# (graph, ) = pydot.graph_from_dot_file('tree.dot')\n",
+    "\n",
+    "# # Write graph to a png file\n",
+    "# graph.write_png('data/generated/tree.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get numerical feature importances\n",
+    "importances = list(rf.feature_importances_)\n",
+    "\n",
+    "# List of tuples with variable and importance\n",
+    "feature_importances = [(feature, round(importance, 2)) for feature, importance in zip(feature_list, importances)]\n",
+    "\n",
+    "# Sort the feature importances by most important first\n",
+    "feature_importances = sorted(feature_importances, key = lambda x: x[1], reverse = True)\n",
+    "\n",
+    "# Set the style\n",
+    "plt.style.use('fivethirtyeight')\n",
+    "\n",
+    "# list of x locations for plotting\n",
+    "x_values = list(range(len(importances)))\n",
+    "\n",
+    "# Make a bar chart\n",
+    "plt.bar(x_values, importances, orientation = 'vertical')\n",
+    "\n",
+    "# Tick labels for x axis\n",
+    "plt.xticks(x_values, feature_list, rotation='vertical')\n",
+    "plt.ylabel('Importance'); plt.xlabel('Variable'); plt.title('Variable Importances');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
