--- a/delay_prediction.ipynb
+++ b/delay_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,28 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IOError",
-     "evalue": "File data/fahrzeiten_soll_ist_20190623_20190629.csv does not exist",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-d7ddc591613e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcsv_names\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mdataSet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data/'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataSet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'linie'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'richtung'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'halt_diva_von'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'datum_von'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'soll_an_von'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'ist_an_von'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'halt_diva_nach'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'halt_diva_von'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mtargetStationId\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/drizzlingzl/Library/Python/2.7/lib/python/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36mparser_f\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, escapechar, comment, encoding, dialect, tupleize_cols, error_bad_lines, warn_bad_lines, skipfooter, doublequote, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[1;32m    676\u001b[0m                     skip_blank_lines=skip_blank_lines)\n\u001b[1;32m    677\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 678\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    679\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    680\u001b[0m     \u001b[0mparser_f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/drizzlingzl/Library/Python/2.7/lib/python/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    438\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    439\u001b[0m     \u001b[0;31m# Create the parser.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 440\u001b[0;31m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    441\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    442\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/drizzlingzl/Library/Python/2.7/lib/python/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m    785\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'has_index_names'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'has_index_names'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    786\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 787\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    788\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    789\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/drizzlingzl/Library/Python/2.7/lib/python/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36m_make_engine\u001b[0;34m(self, engine)\u001b[0m\n\u001b[1;32m   1012\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'c'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1013\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'c'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1014\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCParserWrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1015\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1016\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'python'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/drizzlingzl/Library/Python/2.7/lib/python/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, src, **kwds)\u001b[0m\n\u001b[1;32m   1706\u001b[0m         \u001b[0mkwds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'usecols'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0musecols\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1707\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1708\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparsers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTextReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1709\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1710\u001b[0m         \u001b[0mpassed_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnames\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.__cinit__\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._setup_parser_source\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mIOError\u001b[0m: File data/fahrzeiten_soll_ist_20190623_20190629.csv does not exist"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "csv_names = ['fahrzeiten_soll_ist_20190623_20190629.csv',\n",
     "             'fahrzeiten_soll_ist_20190616_20190622.csv', \n",
@@ -66,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('stationDS data shape: ', (0, 7))\n"
+      "('stationDS data shape: ', (63999, 7))\n"
      ]
     },
     {
@@ -107,17 +88,137 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>58978</th>\n",
+       "      <td>75</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2572</td>\n",
+       "      <td>01.07.19</td>\n",
+       "      <td>138</td>\n",
+       "      <td>186</td>\n",
+       "      <td>3447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53987</th>\n",
+       "      <td>94</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2572</td>\n",
+       "      <td>01.07.19</td>\n",
+       "      <td>192</td>\n",
+       "      <td>189</td>\n",
+       "      <td>3034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53978</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2572</td>\n",
+       "      <td>01.07.19</td>\n",
+       "      <td>252</td>\n",
+       "      <td>306</td>\n",
+       "      <td>3034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53986</th>\n",
+       "      <td>61</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2572</td>\n",
+       "      <td>01.07.19</td>\n",
+       "      <td>270</td>\n",
+       "      <td>388</td>\n",
+       "      <td>3154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58980</th>\n",
+       "      <td>75</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2572</td>\n",
+       "      <td>01.07.19</td>\n",
+       "      <td>504</td>\n",
+       "      <td>480</td>\n",
+       "      <td>694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58969</th>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2572</td>\n",
+       "      <td>01.07.19</td>\n",
+       "      <td>540</td>\n",
+       "      <td>460</td>\n",
+       "      <td>6033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54004</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2572</td>\n",
+       "      <td>01.07.19</td>\n",
+       "      <td>636</td>\n",
+       "      <td>628</td>\n",
+       "      <td>3154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53983</th>\n",
+       "      <td>62</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2572</td>\n",
+       "      <td>01.07.19</td>\n",
+       "      <td>672</td>\n",
+       "      <td>659</td>\n",
+       "      <td>3034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67069</th>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2572</td>\n",
+       "      <td>01.07.19</td>\n",
+       "      <td>732</td>\n",
+       "      <td>744</td>\n",
+       "      <td>2151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67073</th>\n",
+       "      <td>14</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2572</td>\n",
+       "      <td>01.07.19</td>\n",
+       "      <td>762</td>\n",
+       "      <td>821</td>\n",
+       "      <td>3447</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [line, direction, station_diva_id, date, should_arrive_at, actually_arrived_at, next_station_diva_nach]\n",
-       "Index: []"
+       "      line direction station_diva_id      date should_arrive_at  \\\n",
+       "58978   75         2            2572  01.07.19              138   \n",
+       "53987   94         2            2572  01.07.19              192   \n",
+       "53978   10         2            2572  01.07.19              252   \n",
+       "53986   61         1            2572  01.07.19              270   \n",
+       "58980   75         1            2572  01.07.19              504   \n",
+       "58969   12         1            2572  01.07.19              540   \n",
+       "54004   11         2            2572  01.07.19              636   \n",
+       "53983   62         2            2572  01.07.19              672   \n",
+       "67069   14         1            2572  01.07.19              732   \n",
+       "67073   14         2            2572  01.07.19              762   \n",
+       "\n",
+       "      actually_arrived_at next_station_diva_nach  \n",
+       "58978                 186                   3447  \n",
+       "53987                 189                   3034  \n",
+       "53978                 306                   3034  \n",
+       "53986                 388                   3154  \n",
+       "58980                 480                    694  \n",
+       "58969                 460                   6033  \n",
+       "54004                 628                   3154  \n",
+       "53983                 659                   3034  \n",
+       "67069                 744                   2151  \n",
+       "67073                 821                   3447  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,16 +248,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "line                      object\n",
+       "direction                 object\n",
+       "station_diva_id           object\n",
+       "date                      object\n",
+       "should_arrive_at          object\n",
+       "actually_arrived_at       object\n",
+       "next_station_diva_nach    object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "stationDS.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +293,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 10, 11, 12, 14, 15, 17, 61, 62, 75, 94]\n"
+     ]
+    }
+   ],
    "source": [
     "#Plotting graphs\n",
     "\n",
