--- a/delay_prediction_classification.ipynb
+++ b/delay_prediction_classification.ipynb
@@ -595,6 +595,48 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(69,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "col_names = ['direction','line', 'next_station_diva_nach', 'should_arrive_at',\n",
+    "            'day_of_week', 'day', 'month']\n",
+    "tds = pd.DataFrame(train_features, columns=col_names)\n",
+    "tds['year'] = 2019\n",
+    "tds['date'] = pd.to_datetime(tds[['year', 'month', 'day']])\n",
+    "print(tds.date.unique().shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(17,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "testds = pd.DataFrame(test_features, columns=col_names)\n",
+    "testds['year'] = 2019\n",
+    "testds['date'] = pd.to_datetime(testds[['year', 'month', 'day']])\n",
+    "print(testds.date.unique().shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -608,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
