added blind guess and compared with prediction

--- a/data_generation.ipynb
+++ b/data_generation.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# path4-delay-prediction data generation\n",
+    "\n",
+    "Download public transport data of Zurich:\n",
+    "https://data.stadt-zuerich.ch/dataset/vbz-fahrzeiten-ogd"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
